// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Debts should display the activity indicator in the footer if it is fetching 1`] = `
<ActivityIndicator
  animating={true}
  color="#999999"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "marginVertical": 20,
    }
  }
/>
`;

exports[`Pages Debts should renders correctly with debts and fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Debts"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "contact": Object {
            "first_name": "Theo",
          },
          "in_debt": "yes",
          "reason": "My reason",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Debts should renders correctly with debts and fetching 2`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "borderRadius": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 2,
          },
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 13,
          }
        }
      >
        You owe
      </Text>
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 6,
          "marginTop": 2,
        }
      }
    >
      $
    </Text>
  </Component>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 13,
      }
    }
  >
    My reason
  </Text>
</View>
`;

exports[`Pages Debts should renders correctly with debts and fetching 3`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Debts"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "contact": Object {
            "first_name": "Theo",
          },
          "in_debt": "yes",
          "reason": "My reason",
        },
        Object {
          "contact": Object {
            "first_name": "Bill",
          },
          "in_debt": "no",
          "reason": "My reason 2",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Debts should renders correctly with debts and fetching 4`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "borderRadius": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 2,
          },
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 13,
          }
        }
      >
        You owe
      </Text>
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 6,
          "marginTop": 2,
        }
      }
    >
      $
    </Text>
  </Component>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 13,
      }
    }
  >
    My reason
  </Text>
</View>
`;

exports[`Pages Debts should renders correctly with debts and fetching 5`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <Component
      style={
        Array [
          Object {
            "borderRadius": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 2,
          },
          Object {
            "backgroundColor": "#355974",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 13,
          }
        }
      >
        Bill owes you
      </Text>
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 6,
          "marginTop": 2,
        }
      }
    >
      $
    </Text>
  </Component>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 13,
      }
    }
  >
    My reason 2
  </Text>
</View>
`;

exports[`Pages Debts should renders correctly without debts and fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Debts"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Debts should renders correctly without debts and not fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Debts"
  />
  <EmptyActivity
    image={1}
    subtitle="But having no debts that you owe is a way to stay happy in your friendship."
    title="Money doesn’t buy happiness."
  />
</Component>
`;
